updated web server configuration

--- a/apache2/sites-available/013-www.hostels.in
+++ b/apache2/sites-available/013-www.hostels.in
@@ -6,38 +6,17 @@ NameVirtualHost 95.142.170.11:80
         ServerAlias     hostels.in
         ServerAdmin     technical@mcwebmanagement.com
 
-        DocumentRoot "/srv/d_mcweb8/www/ajroot/htdocs"
-    <Directory "/srv/d_mcweb8/www/ajroot/htdocs">
-        Options Indexes FollowSymLinks MultiViews
-        AllowOverride All
-        Order allow,deny
-        Allow from all
-    </Directory>
+        DocumentRoot "/opt/web"
+        <Directory "/opt/web">
+                Options Indexes FollowSymLinks MultiViews
+                AllowOverride All
+                Order allow,deny
+                Allow from all
+        </Directory>
 
-    ScriptAlias /cgi-bin/ /srv/d_mcweb8/www/ajroot/cgi-bin/
-    <Directory "/srv/d_mcweb8/www/ajroot/cgi-bin/">
-        AllowOverride None
-        Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-        Order allow,deny
-        Allow from all
-    </Directory>
-
-    ErrorLog /srv/d_mcweb8/www/ajroot/logs/www.hostels.in-error.log
-    LogLevel warn
-
-    SetEnvIf Remote_Addr "127\.0\.0\.1" loopback
-    CustomLog /srv/d_mcweb8/www/ajroot/logs/www.hostels.in-access.log combined env=!loopback
-    ServerSignature On
-
-    <IfModule mod_dav.c>
-        DAVLockDB /srv/d_mcweb8/www/ajroot/db/DAVLock
-    </IfModule>
-
-    <IfModule mpm_peruser_module>
-        ServerEnvironment adminftp_www-adminftp
-        MaxProcessors 40
-    </IfModule>
-    
+        CustomLog /opt/logs/hostels.in-access.log combined
+        ErrorLog /opt/logs/hostels.in-error.log
+        LogLevel warn    
 
 </VirtualHost>
 
@@ -50,44 +29,23 @@ NameVirtualHost 95.142.170.11:443
         ServerAlias     hostels.in
         ServerAdmin     technical@mcwebmanagement.com
 
-        DocumentRoot "/srv/d_mcweb8/www/ajroot/htdocs"
-    <Directory "/srv/d_mcweb8/www/ajroot/htdocs">
-        Options Indexes FollowSymLinks MultiViews
-        AllowOverride All
-        Order allow,deny
-        Allow from all
-    </Directory>
+        DocumentRoot "/opt/web"
+        <Directory "/opt/web">
+                Options Indexes FollowSymLinks MultiViews
+                AllowOverride All
+                Order allow,deny
+                Allow from all
+        </Directory>
 
-    ScriptAlias /cgi-bin/ /srv/d_mcweb8/www/ajroot/cgi-bin/
-    <Directory "/srv/d_mcweb8/www/ajroot/cgi-bin/">
-        AllowOverride None
-        Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-        Order allow,deny
-        Allow from all
-    </Directory>
+        CustomLog /opt/logs/hostels.in-access.log combined
+        ErrorLog /opt/logs/hostels.in-error.log
+        LogLevel warn
 
-    ErrorLog /srv/d_mcweb8/www/ajroot/logs/www.hostels.in-error.log
-    LogLevel warn
+	SSLEngine on
 
-    SetEnvIf Remote_Addr "127\.0\.0\.1" loopback
-    CustomLog /srv/d_mcweb8/www/ajroot/logs/www.hostels.in-access.log combined env=!loopback
-    ServerSignature On
-
-    <IfModule mod_dav.c>
-        DAVLockDB /srv/d_mcweb8/www/ajroot/db/DAVLock
-    </IfModule>
-
-    <IfModule mpm_peruser_module>
-        ServerEnvironment adminftp_www-adminftp
-        MaxProcessors 40
-    </IfModule>
-
-    
-    SSLEngine on
-
-    SSLCertificateFile      /etc/apache2/ssl-cert/hostels.in.crt
-    SSLCACertificateFile    /etc/apache2/ssl-cert/hostels.in.pem
-    SSLCertificateKeyFile   /etc/apache2/ssl-cert/hostels.in.key
+    	SSLCertificateFile      /opt/certificates/hostels.in.crt
+    	SSLCACertificateFile    /opt/certificates/hostels.in.pem
+    	SSLCertificateKeyFile   /opt/certificates/hostels.in.key
 
 </VirtualHost>
 
