--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,9 @@
 /web/ci/cache_queries/staticfeeds/*
 /web/ci/cache_queries/staticfeeds/!placeholder.txt
 /web/ci/cache_queries/jscitydata/hb/*.xml
+/web/ci/cache_queries/jscitydata/*.xml
 /web/ci/js/cache/*
+/web/ci/js/cache/!placeholder.txt
 
 ##########################
 #           OS           #
