Added WP theme script cache folder in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ Thumbs.db
 #     Dreamweaver        #
 ##########################
 dwsync.xml
+
+##########################
+#    Wordpress Cache     #
+##########################
+
+web/wp/wp-content/themes/Auberge/scripts/cache/*
