--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,7 @@ Source Code and Artifcats for Auberges De Jeunesse
 # Set default behaviour, in case users don't have core.autocrlf set.
 * text eol=lf
 
-*.com text  eol=crlf
+*.com text  eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
