--- a/web/.htaccess
+++ b/web/.htaccess
@@ -4,13 +4,15 @@ AddDefaultCharset UTF-8
 RewriteEngine on
 RewriteBase /
 
-#RewriteRule maintenance.html  -  [L]
-#RewriteCond %{REMOTE_ADDR} !^(67\.68\.71\.139|174\.1\.201\.130)
-#RewriteRule (.*) ./maintenance.html [L]
 
-#Ensure www is used
-RewriteCond %{HTTP_HOST}   ^(wwww\.)?(alberguesjuveniles\.com|youth-hostel\.com|hostales\.com|auberges\.com|aubergesdejeunesse\.com|alberguesdajuventude\.com|ostellidellagioventu\.com|youth-hostels\.jp|jugendherbergen\.eu|youth-hostels\.kr|pousadasdejuventude\.com|alberguesjuveniles\.es|albergues-pensiones\.com|hostels\.in|youth-hostels\.co\.uk|youth-hostels\.ca|aubergesdejeunesse\.ca|hostelek\.com|hostels\.ru\.com|youth-hostels\.hk|hostele\.com|youth-hostels\.ru|schroniskamlodziezowe\.com|retkeilymajoja\.com|hostely\.com|herbergen\.com|ifjusagiszallasok\.com|mladeznickeubytovny\.com|hostelleja\.com|xn--e1amhmfp1c\.xn--p1ai|hosteis\.com|hostelli\.com|youth-hostels\.ie|youth-hostels\.co\.nz|youth-hostels\.co\.nz|youth-hostels\.eu|youth-hostels\.asia|youth-hostels\.cn|hostels\.jp|hostels\.mobi|nofeeshostels\.com|xn--xn2by4qtje86kn5ezmb\.kr) [NC]
-RewriteRule ^/?(.*)         http://www.%2/$1 [L,R,NE]
+#-------------------- Maintenance ------------------
+
+# All the webites
+#RewriteRule .* maintenance.html [L]
+
+# only for HW websites
+#RewriteCond %{HTTP_HOST}   ^(www\.)?(alberguesjuveniles\.com|youth-hostel\.com|aubergesdejeunesse\.com|alberguesdajuventude\.com|ostellidellagioventu\.com|youth-hostels\.jp|jugendherbergen\.eu|youth-hostels\.kr|pousadasdejuventude\.com|alberguesjuveniles\.es|youth-hostels\.co\.uk|youth-hostels\.ca|aubergesdejeunesse\.ca|youth-hostels\.hk|youth-hostels\.ru|schroniskamlodziezowe\.com|retkeilymajoja\.com|ifjusagiszallasok\.com|mladeznickeubytovny\.com|youth-hostels\.ie|youth-hostels\.co\.nz|youth-hostels\.co\.nz|youth-hostels\.eu|youth-hostels\.asia|youth-hostels\.cn|hostels\.mobi|hwsitetest\.com) [NC]
+#RewriteRule .* maintenance.html [L]
 
 #-------------------- Redirection ------------------
 
