move cache higher

--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@
 /web/ci/cache_queries/staticfeeds/!placeholder.txt
 /web/ci/cache_queries/jscitydata/hb/*.xml
 /web/ci/cache_queries/jscitydata/*.xml
-/web/ci/js/cache/*
-/web/ci/js/cache/!placeholder.txt
+/web/ci/cache/*
+/web/ci/cache/!placeholder.txt
 
 ##########################
 #           OS           #
