create cache folder

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,8 @@
 /web/ci/cache_queries/staticfeeds/!placeholder.txt
 /web/ci/cache_queries/jscitydata/hb/*.xml
 /web/ci/cache_queries/jscitydata/*.xml
-/web/ci/cache/*
+/web/ci/cache/*.js
+/web/ci/cache/*.css
 /web/ci/cache/!placeholder.txt
 
 ##########################
