new infra apache conf

--- a/apache2/043-www.hbsitetest.com.conf
+++ b/apache2/043-www.hbsitetest.com.conf
@@ -9,7 +9,7 @@
     <Directory "/opt/web">
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
-	AuthUserFile /etc/apache2/users.conf
+	AuthUserFile /opt/apache2/users.conf
 	AuthName "This is a protected area" 
 	AuthGroupFile /dev/null 
 	AuthType Basic 
