--- a/apache2/044-www.hwsitetest.com.conf
+++ b/apache2/044-www.hwsitetest.com.conf
@@ -1,22 +1,23 @@
 <VirtualHost *:80>
 
-    ServerName      www.mcdev1.com
-    ServerAlias     mcdev1.com
+    ServerName      www.hwsitetest.com
+    ServerAlias     hwsitetest.com
     ServerAdmin     technical@mcwebmanagement.com
 
-    DocumentRoot "/var/www"
-    <Directory "/var/www">
+    DocumentRoot "/opt/web"
+    <Directory "/opt/web">
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
-        AuthUserFile /etc/apache2/users.conf
+        AuthUserFile /opt/apache2/users.conf
         AuthName "This is a protected area"
         AuthGroupFile /dev/null
         AuthType Basic
         Require valid-user
     </Directory>
 
-    CustomLog /opt/logs/mcdev1.com-access.log combined
-    ErrorLog /opt/logs/mcdev1.com-error.log
+    CustomLog /opt/logs/hwsitetest.com-access.log combined
+    ErrorLog /opt/logs/hwsitetest.com-error.log
     LogLevel warn
 
 </VirtualHost>
+
