--- a/apache2/000-www.mcdev1.com.conf
+++ b/apache2/000-www.mcdev1.com.conf
@@ -4,8 +4,8 @@
     ServerAlias     mcdev1.com
     ServerAdmin     technical@mcwebmanagement.com
 
-    DocumentRoot "/var/www"
-    <Directory "/var/www">
+    DocumentRoot "/opt/apache2/dev"
+    <Directory "/opt/apache2/dev">
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
         AuthUserFile /opt/apache2/users.conf
