--- a/apache2/users.conf
+++ b/apache2/users.conf
@@ -6,3 +6,4 @@ ylymar:$apr1$xWHUM5hv$B.XrWDHXUhAQ.Rwz3k/9M0
 mikgozalo:$apr1$cWUjR2vG$odV/FDzDRpIo3yAACJzGk.
 rmordecai:$apr1$.St2ymjU$Sum2OZXwxC9Y7LOQwuvT20
 tester:$apr1$9zJ4FCqh$ep7oZFRCwg5utdPlZ/rSv.
+cron:owLXt/TNRZM9o
