--- a/apache2/043-www.hbsitetest.com.conf
+++ b/apache2/043-www.hbsitetest.com.conf
@@ -21,3 +21,35 @@
     LogLevel warn
 
 </VirtualHost>
+
+<VirtualHost *:443>
+
+    ServerName      www.hbsitetest.com
+    ServerAlias     hbsitetest.com
+    ServerAdmin     technical@mcwebmanagement.com
+
+    DocumentRoot "/opt/web"
+    <Directory "/opt/web">
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride All
+        AuthUserFile /opt/apache2/users.conf
+        AuthName "This is a protected area"
+        AuthGroupFile /dev/null
+        AuthType Basic
+        Require valid-user
+    </Directory>
+
+    CustomLog /opt/logs/hbsitetest.com-access.log combined
+    ErrorLog /opt/logs/hbsitetest.com-error.log
+    LogLevel warn
+    
+    SSLEngine on
+    SSLProtocol all -SSLv2
+    SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM
+
+    SSLCertificateFile /opt/certificates/worldhostelsgroup.crt
+    SSLCertificateKeyFile /opt/certificates/worldhostelsgroup.key
+    SSLCertificateChainFile /opt/certificates/startssl.sub.class2.server.ca.pem
+    SSLCACertificateFile /opt/certificates/startssl.ca.pem
+
+</VirtualHost>
