update certificates names

--- a/apache2/044-www.hwsitetest.com.conf
+++ b/apache2/044-www.hwsitetest.com.conf
@@ -46,8 +46,8 @@
     SSLProtocol all -SSLv2
     SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM
 
-    SSLCertificateFile /opt/certificates/worldhostelsgroup.crt
-    SSLCertificateKeyFile /opt/certificates/worldhostelsgroup.key
+    SSLCertificateFile /opt/certificates/worldhostelsgroup.com.crt
+    SSLCertificateKeyFile /opt/certificates/worldhostelsgroup.com.key
     SSLCertificateChainFile /opt/certificates/startssl.sub.class2.server.ca.pem
     SSLCACertificateFile /opt/certificates/startssl.ca.pem
 
