--- a/apache2/lb/sites/003-www.hostales.com.conf
+++ b/apache2/lb/sites/003-www.hostales.com.conf
@@ -1,6 +1,6 @@
-<VirtualHost *:8080>	
-	ServerName www.hbsitetest.com
-	ServerAlias hbsitetest.com
+<VirtualHost *:8080>
+	ServerName www.hostales.com
+	ServerAlias hostales.com
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -12,8 +12,8 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hbsitetest.com"
+		CacheRoot "/opt/cache/hostales.com"
 	</IfModule>
-	ErrorLog /opt/logs/www.hbsitetest.com-error.log
-	CustomLog /opt/logs/www.hbsitetest.com-access.log combined
+	ErrorLog /opt/logs/www.hostales.com-error.log
+	CustomLog /opt/logs/www.hostales.com-access.log combined
 </VirtualHost>
