--- a/apache2/lb/sites/013-www.hostels.in.conf
+++ b/apache2/lb/sites/013-www.hostels.in.conf
@@ -1,6 +1,6 @@
-<VirtualHost *:8080>	
-	ServerName www.hbsitetest.com
-	ServerAlias hbsitetest.com
+<VirtualHost *:8080>
+	ServerName www.hostels.in
+	ServerAlias hostels.in
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -12,8 +12,8 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hbsitetest.com"
+		CacheRoot "/opt/cache/hostels.in"
 	</IfModule>
-	ErrorLog /opt/logs/www.hbsitetest.com-error.log
-	CustomLog /opt/logs/www.hbsitetest.com-access.log combined
+	ErrorLog /opt/logs/www.hostels.in-error.log
+	CustomLog /opt/logs/www.hostels.in-access.log combined
 </VirtualHost>
