--- a/apache2/lb/sites/040-www.hostels.mobi.conf
+++ b/apache2/lb/sites/040-www.hostels.mobi.conf
@@ -1,6 +1,6 @@
-<VirtualHost *:8080>	
-	ServerName www.hbsitetest.com
-	ServerAlias hbsitetest.com
+<VirtualHost *:8080>
+	ServerName www.hostels.mobi
+	ServerAlias hostels.mobi
 	ProxyPreserveHost on
 	ProxyPass / balancer://balancer/ 
 	ProxyPassReverse / balancer://balancer/
@@ -12,8 +12,8 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hbsitetest.com"
+		CacheRoot "/opt/cache/hostels.mobi"
 	</IfModule>
-	ErrorLog /opt/logs/www.hbsitetest.com-error.log
-	CustomLog /opt/logs/www.hbsitetest.com-access.log combined
+	ErrorLog /opt/logs/www.hostels.mobi-error.log
+	CustomLog /opt/logs/www.hostels.mobi-access.log combined
 </VirtualHost>
