--- a/apache2/lb/sites/044-www.hwsitetest.com.conf
+++ b/apache2/lb/sites/044-www.hwsitetest.com.conf
@@ -1,11 +1,19 @@
-<VirtualHost balancer.proxy:8080>
-
-    ServerName      www.hwsitetest.com
-    
-    ProxyPass / balancer://www.hwsitetest.com.balancer/
-
-    CustomLog /opt/logs/hwsitetest.com-access.log combined
-    ErrorLog /opt/logs/hwsitetest.com-error.log
-    LogLevel warn
-
+<VirtualHost *:8080>	
+	ServerName www.hwsitetest.com
+	ServerAlias hwsitetest.com
+	ProxyPreserveHost on
+	ProxyPass / balancer://balancer/ 
+	ProxyPassReverse / balancer://balancer/
+	<Proxy balancer://balancer>
+		BalancerMember http://mcweb01:80 loadfactor=1 route=mcweb01
+		BalancerMember http://mcweb02:80 loadfactor=1 route=mcweb02
+	</Proxy>
+	<IfModule mod_disk_cache.c>
+		CacheEnable disk /
+		CacheMaxFileSize 512000
+		CacheMinFileSize 100
+		CacheRoot "/opt/cache/hwsitetest.com"
+	</IfModule>
+	ErrorLog /opt/logs/www.hwsitetest.com-error.log
+	CustomLog /opt/logs/www.hwsitetest.com-access.log combined
 </VirtualHost>
