updated virtual host

--- a/apache2/lb/sites/010-www.pousadasdejuventude.com.conf
+++ b/apache2/lb/sites/010-www.pousadasdejuventude.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.pousadasdejuventude.com
 	ServerAlias pousadasdejuventude.com
 	ProxyPreserveHost on
