--- a/apache2/lb/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
+++ b/apache2/lb/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.xn--xn2by4qtje86kn5ezmb.kr
 	ServerAlias xn--xn2by4qtje86kn5ezmb.kr
 	ProxyPreserveHost on
