--- a/apache2/lb/sites/001-www.alberguesjuveniles.com.conf
+++ b/apache2/lb/sites/001-www.alberguesjuveniles.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.alberguesjuveniles.com
 	ServerAlias alberguesjuveniles.com
 	ProxyPreserveHost on
