--- a/apache2/lb/sites/003-www.hostales.com.conf
+++ b/apache2/lb/sites/003-www.hostales.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.hostales.com
 	ServerAlias hostales.com
 	ProxyPreserveHost on
