--- a/apache2/lb/sites/005-www.alberguesdajuventude.com.conf
+++ b/apache2/lb/sites/005-www.alberguesdajuventude.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.alberguesdajuventude.com
 	ServerAlias alberguesdajuventude.com
 	ProxyPreserveHost on
