--- a/apache2/lb/sites/011-www.alberguesjuveniles.es.conf
+++ b/apache2/lb/sites/011-www.alberguesjuveniles.es.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.alberguesjuveniles.es
 	ServerAlias alberguesjuveniles.es
 	ProxyPreserveHost on
