--- a/apache2/lb/sites/018-www.aubergesdejeunesse.ca.conf
+++ b/apache2/lb/sites/018-www.aubergesdejeunesse.ca.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.aubergesdejeunesse.ca
 	ServerAlias aubergesdejeunesse.ca
 	ProxyPreserveHost on
