--- a/apache2/lb/sites/021-www.youth-hostels.ru.conf
+++ b/apache2/lb/sites/021-www.youth-hostels.ru.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.ru
 	ServerAlias youth-hostels.ru
 	ProxyPreserveHost on
