--- a/apache2/lb/sites/025-www.retkeilymajoja.com.conf
+++ b/apache2/lb/sites/025-www.retkeilymajoja.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.retkeilymajoja.com
 	ServerAlias retkeilymajoja.com
 	ProxyPreserveHost on
