--- a/apache2/lb/sites/026-www.hostely.com.conf
+++ b/apache2/lb/sites/026-www.hostely.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.hostely.com
 	ServerAlias hostely.com
 	ProxyPreserveHost on
