--- a/apache2/lb/sites/028-www.hostelleja.com.conf
+++ b/apache2/lb/sites/028-www.hostelleja.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.hostelleja.com
 	ServerAlias hostelleja.com
 	ProxyPreserveHost on
