--- a/apache2/lb/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
+++ b/apache2/lb/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.xn--e1amhmfp1c.xn--p1ai
 	ServerAlias xn--e1amhmfp1c.xn--p1ai
 	ProxyPreserveHost on
