--- a/apache2/lb/sites/033-www.hostelli.com.conf
+++ b/apache2/lb/sites/033-www.hostelli.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.hostelli.com
 	ServerAlias hostelli.com
 	ProxyPreserveHost on
