--- a/apache2/lb/sites/037-www.youth-hostels.asia.conf
+++ b/apache2/lb/sites/037-www.youth-hostels.asia.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.asia
 	ServerAlias youth-hostels.asia
 	ProxyPreserveHost on
