--- a/apache2/lb/sites/038-www.youth-hostels.cn.conf
+++ b/apache2/lb/sites/038-www.youth-hostels.cn.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.youth-hostels.cn
 	ServerAlias youth-hostels.cn
 	ProxyPreserveHost on
