--- a/apache2/lb/sites/041-www.nofeeshostels.com.conf
+++ b/apache2/lb/sites/041-www.nofeeshostels.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>
+<VirtualHost balancer.proxy:8080>
 	ServerName www.nofeeshostels.com
 	ServerAlias nofeeshostels.com
 	ProxyPreserveHost on
