--- a/apache2/lb/sites/043-www.hbsitetest.com.conf
+++ b/apache2/lb/sites/043-www.hbsitetest.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>	
+<VirtualHost balancer.proxy:8080>	
 	ServerName www.hbsitetest.com
 	ServerAlias hbsitetest.com
 	ProxyPreserveHost on
