--- a/apache2/lb/sites/044-www.hwsitetest.com.conf
+++ b/apache2/lb/sites/044-www.hwsitetest.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:8080>	
+<VirtualHost balancer.proxy:8080>	
 	ServerName www.hwsitetest.com
 	ServerAlias hwsitetest.com
 	ProxyPreserveHost on
