updated dev configuration

--- a/apache2/web/sites/000-www.mcdev1.com.conf
+++ b/apache2/web/sites/000-www.mcdev1.com.conf
@@ -4,11 +4,11 @@
     ServerAlias     mcdev1.com
     ServerAdmin     technical@mcwebmanagement.com
 
-    DocumentRoot "/opt/apache2/dev"
-    <Directory "/opt/apache2/dev">
+    DocumentRoot "/opt/apache2/web/code"
+    <Directory "/opt/apache2/web/code">
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
-        AuthUserFile /opt/apache2/users.conf
+        AuthUserFile /opt/apache2/web/conf/users.conf
         AuthName "This is a protected area"
         AuthGroupFile /dev/null
         AuthType Basic
