--- a/apache2/web/sites/043-www.hbsitetest.com.conf
+++ b/apache2/web/sites/043-www.hbsitetest.com.conf
@@ -9,7 +9,7 @@
     <Directory "/opt/web">
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
-	AuthUserFile /opt/apache2/users.conf
+        AuthUserFile /opt/apache2/web/conf/users.conf
 	AuthName "This is a protected area" 
 	AuthGroupFile /dev/null 
 	AuthType Basic 
@@ -32,7 +32,7 @@
     <Directory "/opt/web">
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
-        AuthUserFile /opt/apache2/users.conf
+        AuthUserFile /opt/apache2/web/conf/users.conf
         AuthName "This is a protected area"
         AuthGroupFile /dev/null
         AuthType Basic
