--- a/apache2/web/sites/044-www.hwsitetest.com.conf
+++ b/apache2/web/sites/044-www.hwsitetest.com.conf
@@ -8,7 +8,7 @@
     <Directory "/opt/web">
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
-        AuthUserFile /opt/apache2/users.conf
+        AuthUserFile /opt/apache2/web/conf/users.conf
         AuthName "This is a protected area"
         AuthGroupFile /dev/null
         AuthType Basic
@@ -31,7 +31,7 @@
     <Directory "/opt/web">
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
-        AuthUserFile /opt/apache2/users.conf
+        AuthUserFile /opt/apache2/web/conf/users.conf
         AuthName "This is a protected area"
         AuthGroupFile /dev/null
         AuthType Basic
