--- a/apache2/prod/web/sites/044-www.hwsitetest.com.conf
+++ b/apache2/prod/web/sites/044-www.hwsitetest.com.conf
@@ -1,54 +1,18 @@
 <VirtualHost *:80>
+        ServerName      www.hbsitetest.com
+        ServerAlias     www.hbsitetest.com hbsitetest.com
+        ServerAdmin     technical@mcwebmanagement.com
 
-    ServerName      www.hwsitetest.com
-    ServerAlias     hwsitetest.com
-    ServerAdmin     technical@mcwebmanagement.com
+        DocumentRoot "/opt/web"
+        <Directory "/opt/web">
+                Options Indexes FollowSymLinks MultiViews
+                AllowOverride All
+                Order allow,deny
+                Allow from all
+        </Directory>
 
-    DocumentRoot "/opt/web"
-    <Directory "/opt/web">
-        Options Indexes FollowSymLinks MultiViews
-        AllowOverride All
-        AuthUserFile /opt/apache2/web/conf/users.conf
-        AuthName "This is a protected area"
-        AuthGroupFile /dev/null
-        AuthType Basic
-        Require valid-user
-    </Directory>
-
-    CustomLog /opt/logs/hwsitetest.com-access.log combined
-    ErrorLog /opt/logs/hwsitetest.com-error.log
-    LogLevel warn
-
-</VirtualHost>
-
-<VirtualHost *:443>
-
-    ServerName      www.hwsitetest.com
-    ServerAlias     hwsitetest.com
-    ServerAdmin     technical@mcwebmanagement.com
-
-    DocumentRoot "/opt/web"
-    <Directory "/opt/web">
-        Options Indexes FollowSymLinks MultiViews
-        AllowOverride All
-        AuthUserFile /opt/apache2/web/conf/users.conf
-        AuthName "This is a protected area"
-        AuthGroupFile /dev/null
-        AuthType Basic
-        Require valid-user
-    </Directory>
-
-    CustomLog /opt/logs/hwsitetest.com-access.log combined
-    ErrorLog /opt/logs/hwsitetest.com-error.log
-    LogLevel warn
-    
-    SSLEngine on
-    SSLProtocol all -SSLv2
-    SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM
-
-    SSLCertificateFile /opt/certificates/worldhostelsgroup.com.crt
-    SSLCertificateKeyFile /opt/certificates/worldhostelsgroup.com.key
-    SSLCertificateChainFile /opt/certificates/startssl.sub.class2.server.ca.pem
-    SSLCACertificateFile /opt/certificates/startssl.ca.pem
+        CustomLog /opt/logs/hbsitetest.com-access.log combined
+        ErrorLog /opt/logs/hbsitetest.com-error.log
+        LogLevel warn
 
 </VirtualHost>
