--- a/apache2/prod/web/sites/005-www.alberguesdajuventude.com.conf
+++ b/apache2/prod/web/sites/005-www.alberguesdajuventude.com.conf
@@ -1,7 +1,7 @@
 
 <VirtualHost *:80>
         ServerName      www.alberguesdajuventude.com
-        #ServerAlias     www.alberguesdajuventude.com
+        ServerAlias     www.alberguesdajuventude.com
         ServerAlias     alberguesdajuventude.com
         ServerAdmin     technical@mcwebmanagement.com
 
@@ -15,11 +15,7 @@
 
         CustomLog /opt/logs/alberguesdajuventude.com-access.log combined
         ErrorLog /opt/logs/alberguesdajuventude.com-error.log
-        #LogLevel warn
-        LogLevel debug
-RewriteLogLevel 6
-RewriteLog /tmp/rewrite.log
-
-
+        LogLevel warn
+        
 </VirtualHost>
 
