update cache location

--- a/apache2/prod/lb/sites/001-www.alberguesjuveniles.com.conf
+++ b/apache2/prod/lb/sites/001-www.alberguesjuveniles.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/alberguesjuveniles.com"
+		CacheRoot "/opt/cache/www.alberguesjuveniles.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.alberguesjuveniles.com-error.log
 	CustomLog /opt/logs/www.alberguesjuveniles.com-access.log combined
