--- a/apache2/prod/lb/sites/002-www.auberges.com.conf
+++ b/apache2/prod/lb/sites/002-www.auberges.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/auberges.com"
+		CacheRoot "/opt/cache/www.auberges.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.auberges.com-error.log
 	CustomLog /opt/logs/www.auberges.com-access.log combined
