--- a/apache2/prod/lb/sites/003-www.hostales.com.conf
+++ b/apache2/prod/lb/sites/003-www.hostales.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hostales.com"
+		CacheRoot "/opt/cache/www.hostales.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.hostales.com-error.log
 	CustomLog /opt/logs/www.hostales.com-access.log combined
