--- a/apache2/prod/lb/sites/006-www.ostellidellagioventu.com.conf
+++ b/apache2/prod/lb/sites/006-www.ostellidellagioventu.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/ostellidellagioventu.com"
+		CacheRoot "/opt/cache/www.ostellidellagioventu.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.ostellidellagioventu.com-error.log
 	CustomLog /opt/logs/www.ostellidellagioventu.com-access.log combined
