--- a/apache2/prod/lb/sites/008-www.jugendherbergen.eu.conf
+++ b/apache2/prod/lb/sites/008-www.jugendherbergen.eu.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/jugendherbergen.eu"
+		CacheRoot "/opt/cache/www.jugendherbergen.eu"
 	</IfModule>
 	ErrorLog /opt/logs/www.jugendherbergen.eu-error.log
 	CustomLog /opt/logs/www.jugendherbergen.eu-access.log combined
