--- a/apache2/prod/lb/sites/013-www.hostels.in.conf
+++ b/apache2/prod/lb/sites/013-www.hostels.in.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hostels.in"
+		CacheRoot "/opt/cache/www.hostels.in"
 	</IfModule>
 	ErrorLog /opt/logs/www.hostels.in-error.log
 	CustomLog /opt/logs/www.hostels.in-access.log combined
