--- a/apache2/prod/lb/sites/014-www.youth-hostels.co.uk.conf
+++ b/apache2/prod/lb/sites/014-www.youth-hostels.co.uk.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostels.co.uk"
+		CacheRoot "/opt/cache/www.youth-hostels.co.uk"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.co.uk-error.log
 	CustomLog /opt/logs/www.youth-hostels.co.uk-access.log combined
