--- a/apache2/prod/lb/sites/018-www.aubergesdejeunesse.ca.conf
+++ b/apache2/prod/lb/sites/018-www.aubergesdejeunesse.ca.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/aubergesdejeunesse.ca"
+		CacheRoot "/opt/cache/www.aubergesdejeunesse.ca"
 	</IfModule>
 	ErrorLog /opt/logs/www.aubergesdejeunesse.ca-error.log
 	CustomLog /opt/logs/www.aubergesdejeunesse.ca-access.log combined
