--- a/apache2/prod/lb/sites/021-www.youth-hostels.ru.conf
+++ b/apache2/prod/lb/sites/021-www.youth-hostels.ru.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostels.ru"
+		CacheRoot "/opt/cache/www.youth-hostels.ru"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.ru-error.log
 	CustomLog /opt/logs/www.youth-hostels.ru-access.log combined
