--- a/apache2/prod/lb/sites/022-www.hostelek.com.conf
+++ b/apache2/prod/lb/sites/022-www.hostelek.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hostelek.com"
+		CacheRoot "/opt/cache/www.hostelek.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.hostelek.com-error.log
 	CustomLog /opt/logs/www.hostelek.com-access.log combined
