--- a/apache2/prod/lb/sites/023-www.schroniskamlodziezowe.com.conf
+++ b/apache2/prod/lb/sites/023-www.schroniskamlodziezowe.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/schroniskamlodziezowe.com"
+		CacheRoot "/opt/cache/www.schroniskamlodziezowe.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.schroniskamlodziezowe.com-error.log
 	CustomLog /opt/logs/www.schroniskamlodziezowe.com-access.log combined
