--- a/apache2/prod/lb/sites/024-www.aubergesdejeunesse.com.conf
+++ b/apache2/prod/lb/sites/024-www.aubergesdejeunesse.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/aubergesdejeunesse.com"
+		CacheRoot "/opt/cache/www.aubergesdejeunesse.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.aubergesdejeunesse.com-error.log
 	CustomLog /opt/logs/www.aubergesdejeunesse.com-access.log combined
