--- a/apache2/prod/lb/sites/026-www.hostely.com.conf
+++ b/apache2/prod/lb/sites/026-www.hostely.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hostely.com"
+		CacheRoot "/opt/cache/www.hostely.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.hostely.com-error.log
 	CustomLog /opt/logs/www.hostely.com-access.log combined
