--- a/apache2/prod/lb/sites/027-www.herbergen.com.conf
+++ b/apache2/prod/lb/sites/027-www.herbergen.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/herbergen.com"
+		CacheRoot "/opt/cache/www.herbergen.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.herbergen.com-error.log
 	CustomLog /opt/logs/www.herbergen.com-access.log combined
