--- a/apache2/prod/lb/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
+++ b/apache2/prod/lb/sites/031-www.xn--e1amhmfp1c.xn--p1ai.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/xn--e1amhmfp1c.xn--p1ai"
+		CacheRoot "/opt/cache/www.xn--e1amhmfp1c.xn--p1ai"
 	</IfModule>
 	ErrorLog /opt/logs/www.xn--e1amhmfp1c.xn--p1ai-error.log
 	CustomLog /opt/logs/www.xn--e1amhmfp1c.xn--p1ai-access.log combined
