--- a/apache2/prod/lb/sites/033-www.hostelli.com.conf
+++ b/apache2/prod/lb/sites/033-www.hostelli.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hostelli.com"
+		CacheRoot "/opt/cache/www.hostelli.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.hostelli.com-error.log
 	CustomLog /opt/logs/www.hostelli.com-access.log combined
