--- a/apache2/prod/lb/sites/035-www.youth-hostels.co.nz.conf
+++ b/apache2/prod/lb/sites/035-www.youth-hostels.co.nz.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostels.co.nz"
+		CacheRoot "/opt/cache/www.youth-hostels.co.nz"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.co.nz-error.log
 	CustomLog /opt/logs/www.youth-hostels.co.nz-access.log combined
