--- a/apache2/prod/lb/sites/036-www.youth-hostels.eu.conf
+++ b/apache2/prod/lb/sites/036-www.youth-hostels.eu.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostels.eu"
+		CacheRoot "/opt/cache/www.youth-hostels.eu"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.eu-error.log
 	CustomLog /opt/logs/www.youth-hostels.eu-access.log combined
