--- a/apache2/prod/lb/sites/039-www.hostels.jp.conf
+++ b/apache2/prod/lb/sites/039-www.hostels.jp.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hostels.jp"
+		CacheRoot "/opt/cache/www.hostels.jp"
 	</IfModule>
 	ErrorLog /opt/logs/www.hostels.jp-error.log
 	CustomLog /opt/logs/www.hostels.jp-access.log combined
