--- a/apache2/prod/lb/sites/041-www.nofeeshostels.com.conf
+++ b/apache2/prod/lb/sites/041-www.nofeeshostels.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/nofeeshostels.com"
+		CacheRoot "/opt/cache/www.nofeeshostels.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.nofeeshostels.com-error.log
 	CustomLog /opt/logs/www.nofeeshostels.com-access.log combined
