--- a/apache2/prod/lb/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
+++ b/apache2/prod/lb/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/xn--xn2by4qtje86kn5ezmb.kr"
+		CacheRoot "/opt/cache/www.xn--xn2by4qtje86kn5ezmb.kr"
 	</IfModule>
 	ErrorLog /opt/logs/www.xn--xn2by4qtje86kn5ezmb.kr-error.log
 	CustomLog /opt/logs/www.xn--xn2by4qtje86kn5ezmb.kr-access.log combined
