--- a/apache2/prod/lb/sites/044-www.hwsitetest.com.conf
+++ b/apache2/prod/lb/sites/044-www.hwsitetest.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hwsitetest.com"
+		CacheRoot "/opt/cache/www.hwsitetest.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.hwsitetest.com-error.log
 	CustomLog /opt/logs/www.hwsitetest.com-access.log combined
