--- a/apache2/prod/lb/sites/004-www.youth-hostel.com.conf
+++ b/apache2/prod/lb/sites/004-www.youth-hostel.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostel.com"
+		CacheRoot "/opt/cache/www.youth-hostel.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostel.com-error.log
 	CustomLog /opt/logs/www.youth-hostel.com-access.log combined
