--- a/apache2/prod/lb/sites/005-www.alberguesdajuventude.com.conf
+++ b/apache2/prod/lb/sites/005-www.alberguesdajuventude.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/alberguesdajuventude.com"
+		CacheRoot "/opt/cache/www.alberguesdajuventude.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.alberguesdajuventude.com-error.log
 	CustomLog /opt/logs/www.alberguesdajuventude.com-access.log combined
