--- a/apache2/prod/lb/sites/007-www.youth-hostels.jp.conf
+++ b/apache2/prod/lb/sites/007-www.youth-hostels.jp.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostels.jp"
+		CacheRoot "/opt/cache/www.youth-hostels.jp"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.jp-error.log
 	CustomLog /opt/logs/www.youth-hostels.jp-access.log combined
