--- a/apache2/prod/lb/sites/009-www.youth-hostels.kr.conf
+++ b/apache2/prod/lb/sites/009-www.youth-hostels.kr.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostels.kr"
+		CacheRoot "/opt/cache/www.youth-hostels.kr"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.kr-error.log
 	CustomLog /opt/logs/www.youth-hostels.kr-access.log combined
