--- a/apache2/prod/lb/sites/010-www.pousadasdejuventude.com.conf
+++ b/apache2/prod/lb/sites/010-www.pousadasdejuventude.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/pousadasdejuventude.com"
+		CacheRoot "/opt/cache/www.pousadasdejuventude.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.pousadasdejuventude.com-error.log
 	CustomLog /opt/logs/www.pousadasdejuventude.com-access.log combined
