--- a/apache2/prod/lb/sites/011-www.alberguesjuveniles.es.conf
+++ b/apache2/prod/lb/sites/011-www.alberguesjuveniles.es.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/alberguesjuveniles.es"
+		CacheRoot "/opt/cache/www.alberguesjuveniles.es"
 	</IfModule>
 	ErrorLog /opt/logs/www.alberguesjuveniles.es-error.log
 	CustomLog /opt/logs/www.alberguesjuveniles.es-access.log combined
