--- a/apache2/prod/lb/sites/016-www.youth-hostels.hk.conf
+++ b/apache2/prod/lb/sites/016-www.youth-hostels.hk.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostels.hk"
+		CacheRoot "/opt/cache/www.youth-hostels.hk"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.hk-error.log
 	CustomLog /opt/logs/www.youth-hostels.hk-access.log combined
