--- a/apache2/prod/lb/sites/017-www.youth-hostels.ca.conf
+++ b/apache2/prod/lb/sites/017-www.youth-hostels.ca.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostels.ca"
+		CacheRoot "/opt/cache/www.youth-hostels.ca"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.ca-error.log
 	CustomLog /opt/logs/www.youth-hostels.ca-access.log combined
