--- a/apache2/prod/lb/sites/019-www.hostele.com.conf
+++ b/apache2/prod/lb/sites/019-www.hostele.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hostele.com"
+		CacheRoot "/opt/cache/www.hostele.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.hostele.com-error.log
 	CustomLog /opt/logs/www.hostele.com-access.log combined
