--- a/apache2/prod/lb/sites/025-www.retkeilymajoja.com.conf
+++ b/apache2/prod/lb/sites/025-www.retkeilymajoja.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/retkeilymajoja.com"
+		CacheRoot "/opt/cache/www.retkeilymajoja.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.retkeilymajoja.com-error.log
 	CustomLog /opt/logs/www.retkeilymajoja.com-access.log combined
