--- a/apache2/prod/lb/sites/028-www.hostelleja.com.conf
+++ b/apache2/prod/lb/sites/028-www.hostelleja.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hostelleja.com"
+		CacheRoot "/opt/cache/www.hostelleja.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.hostelleja.com-error.log
 	CustomLog /opt/logs/www.hostelleja.com-access.log combined
