--- a/apache2/prod/lb/sites/029-www.mladeznickeubytovny.com.conf
+++ b/apache2/prod/lb/sites/029-www.mladeznickeubytovny.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/mladeznickeubytovny.com"
+		CacheRoot "/opt/cache/www.mladeznickeubytovny.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.mladeznickeubytovny.com-error.log
 	CustomLog /opt/logs/www.mladeznickeubytovny.com-access.log combined
