--- a/apache2/prod/lb/sites/030-www.ifjusagiszallasok.com.conf
+++ b/apache2/prod/lb/sites/030-www.ifjusagiszallasok.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/ifjusagiszallasok.com"
+		CacheRoot "/opt/cache/www.ifjusagiszallasok.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.ifjusagiszallasok.com-error.log
 	CustomLog /opt/logs/www.ifjusagiszallasok.com-access.log combined
