--- a/apache2/prod/lb/sites/032-www.hosteis.com.conf
+++ b/apache2/prod/lb/sites/032-www.hosteis.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hosteis.com"
+		CacheRoot "/opt/cache/www.hosteis.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.hosteis.com-error.log
 	CustomLog /opt/logs/www.hosteis.com-access.log combined
