--- a/apache2/prod/lb/sites/034-www.youth-hostels.ie.conf
+++ b/apache2/prod/lb/sites/034-www.youth-hostels.ie.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostels.ie"
+		CacheRoot "/opt/cache/www.youth-hostels.ie"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.ie-error.log
 	CustomLog /opt/logs/www.youth-hostels.ie-access.log combined
