--- a/apache2/prod/lb/sites/037-www.youth-hostels.asia.conf
+++ b/apache2/prod/lb/sites/037-www.youth-hostels.asia.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostels.asia"
+		CacheRoot "/opt/cache/www.youth-hostels.asia"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.asia-error.log
 	CustomLog /opt/logs/www.youth-hostels.asia-access.log combined
