--- a/apache2/prod/lb/sites/038-www.youth-hostels.cn.conf
+++ b/apache2/prod/lb/sites/038-www.youth-hostels.cn.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/youth-hostels.cn"
+		CacheRoot "/opt/cache/www.youth-hostels.cn"
 	</IfModule>
 	ErrorLog /opt/logs/www.youth-hostels.cn-error.log
 	CustomLog /opt/logs/www.youth-hostels.cn-access.log combined
