--- a/apache2/prod/lb/sites/040-www.hostels.mobi.conf
+++ b/apache2/prod/lb/sites/040-www.hostels.mobi.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hostels.mobi"
+		CacheRoot "/opt/cache/www.hostels.mobi"
 	</IfModule>
 	ErrorLog /opt/logs/www.hostels.mobi-error.log
 	CustomLog /opt/logs/www.hostels.mobi-access.log combined
