--- a/apache2/prod/lb/sites/043-www.hbsitetest.com.conf
+++ b/apache2/prod/lb/sites/043-www.hbsitetest.com.conf
@@ -12,7 +12,7 @@
 		CacheEnable disk /
 		CacheMaxFileSize 512000
 		CacheMinFileSize 100
-		CacheRoot "/opt/cache/hbsitetest.com"
+		CacheRoot "/opt/cache/www.hbsitetest.com"
 	</IfModule>
 	ErrorLog /opt/logs/www.hbsitetest.com-error.log
 	CustomLog /opt/logs/www.hbsitetest.com-access.log combined
