added proxy port

--- a/apache2/dev/sites/000-www.mcdev1.com.conf
+++ b/apache2/dev/sites/000-www.mcdev1.com.conf
@@ -20,3 +20,21 @@
     LogLevel warn
 
 </VirtualHost>
+
+<VirtualHost *:8080>
+
+    ServerName      www.mcdev1.com
+    ServerAlias     mcdev1.com
+    ServerAdmin     technical@mcwebmanagement.com
+
+    DocumentRoot "/opt/apache2/dev/code"
+    <Directory "/opt/apache2/dev/code">
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride All
+    </Directory>
+
+    CustomLog /opt/logs/mcdev1.com-proxy-access.log combined
+    ErrorLog /opt/logs/mcdev1.com-proxy-error.log
+    LogLevel warn
+
+</VirtualHost>
