set allow only from load balancer

--- a/apache2/prod/web/sites/005-www.alberguesdajuventude.com.conf
+++ b/apache2/prod/web/sites/005-www.alberguesdajuventude.com.conf
@@ -10,7 +10,7 @@
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride All
                 Order allow,deny
-                Allow from all
+                Allow from 92.243.16.182
         </Directory>
 
         CustomLog /opt/logs/alberguesdajuventude.com-access.log combined
