--- a/apache2/prod/web/sites/014-www.youth-hostels.co.uk.conf
+++ b/apache2/prod/web/sites/014-www.youth-hostels.co.uk.conf
@@ -11,7 +11,7 @@
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride All
                 Order allow,deny
-                Allow from all
+                Allow from 92.243.16.182
         </Directory>
 
         CustomLog /opt/logs/youth-hostels.co.uk-access.log combined
