--- a/apache2/prod/web/sites/035-www.youth-hostels.co.nz.conf
+++ b/apache2/prod/web/sites/035-www.youth-hostels.co.nz.conf
@@ -9,7 +9,7 @@
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride All
                 Order allow,deny
-                Allow from all
+                Allow from 92.243.16.182
         </Directory>
 
         CustomLog /opt/logs/youth-hostels.co.nz-access.log combined
