--- a/apache2/prod/web/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
+++ b/apache2/prod/web/sites/042-www.xn--xn2by4qtje86kn5ezmb.kr.conf
@@ -9,7 +9,7 @@
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride All
                 Order allow,deny
-                Allow from all
+                Allow from 92.243.16.182
         </Directory>
 
         CustomLog /opt/logs/xn--xn2by4qtje86kn5ezmb.kr-access.log combined
