--- a/apache2/prod/web/sites/044-www.hwsitetest.com.conf
+++ b/apache2/prod/web/sites/044-www.hwsitetest.com.conf
@@ -8,7 +8,7 @@
                 Options Indexes FollowSymLinks MultiViews
                 AllowOverride All
                 Order allow,deny
-                Allow from all
+                Allow from 92.243.16.182
         </Directory>
 
         CustomLog /opt/logs/hbsitetest.com-access.log combined
